syntax = "proto3";

package chatapp;

option go_package = "./proto";

message AddRequest {
    int32 number = 1;
    int32 anotherNumber = 2;
}

message AddResponse {
    int64 sum = 1;
}

service ChatApp {
    rpc Add (AddRequest) returns (AddResponse) {}
}